--- a/client/src/components/home/dashboard/dashboard.css
+++ b/client/src/components/home/dashboard/dashboard.css
@@ -1,5 +1,5 @@
 /* #dashboard-container {
-  min-height: calc(100vh - 55px);
+  margin-top: 55px;
 } */
 img {
   width: 70%;
