--- a/client/src/components/home/landingpage.css
+++ b/client/src/components/home/landingpage.css
@@ -1,4 +1,8 @@
+.landing-page-div {
+    margin: 60px;
+}
+
 img {
-  width: 70%;
+  width: 60%;
   height: auto;
 }
